# goumis

./: README.md  interpretabilidade.md  main.py  pyproject.toml
goumis/: pyproject.toml
goumis/src/model/: greentexts.py
greentext_data/: greentext_val_000000.npy
src/model/: attack.py  debug.py  gpt2.py  greentexts.py  hellaswag.py  output_malicioso.txt  relatorio_ataque.md  train_loop.py
src/model/explainability_notebook/: explainer.ipynb  shap_explainer.py
